--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -10,11 +10,26 @@
 
 /* append your custom style below */
 a.nav-link {
-    padding-top: .6rem;
-    padding-bottom: .6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.75rem;
-    font-weight: 600;
+  @include pt-pb(0.6rem);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.75rem;
+  font-weight: 600;
+
+  &:hover {
+    background-color: var(--sidebar-hover-bg);
+  }
+
+  i {
+    font-size: 95%;
+    opacity: 0.8;
+    margin-right: 1.5rem;
+  }
+
+  span {
+    font-size: 90%;
+    letter-spacing: 0.2px;
+  }
 }
